--- a/templates/adicionar.html
+++ b/templates/adicionar.html
@@ -26,6 +26,7 @@
         <select name="operador" id="operador">
             <option value="Darlan">Darlan</option>
             <option value="Jefferson">Jefferson</option>
+            <option value="Pedro">Pedro Henrique Ainn Doggg</option>
         </select>
         <br>
 
