--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
             <ul>
                 <li><a href="/adicionar">Adicionar Ticket</a></li>
                 <li><a href="#">Remover Ticket</a></li>
+                <li><a href="/login">Sair</a></li>
             </ul>
         </nav>
     </header>
