--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,11 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+}
+
 .site-header {
     background-color: rgb(0, 94, 138);
     padding: 20px 10px;
