--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,4 @@
 .container{
-    padding: 0 20%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,16 +8,21 @@
 .list{
     border: 1px solid black;
     border-radius: 10px;
-    padding: 30px 10px 10px 10px;
+    padding: 1% 1% ;
     display: inline-flex;
     flex-direction: column;
     align-content: center;
     justify-content: center;
+    height: 100%;
     background-color: rgb(66, 66, 66);
 }
+.list h1{
+    color: yellow;
+}
+
 .itens{
     border: 1px solid black;
-    padding: 10px 10px;
-    height: 10%;
+    padding: 5% 5%;
+    height: 90%;
     background-color: rgb(165, 165, 165);
 }
