--- a/static/style.css
+++ b/static/style.css
@@ -32,3 +32,32 @@ gap: 20px
     padding: 20px 10px;
     border-radius: 5px;
 }
+
+.main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.list{
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 1% 1% ;
+    display: inline-flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    height: 100%;
+    background-color: rgb(66, 66, 66);
+}
+.list h1{
+    color: yellow;
+}
+
+.itens{
+    border: 1px solid black;
+    padding: 5% 5%;
+    height: 90%;
+    background-color: rgb(165, 165, 165);
+}
